--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@tailwindcss/postcss": "^4.0.8",
+    "blendy": "^0.0.1",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.17.2",
+    "tailwindcss": "^4.0.8",
     "tslib": "^2.3.0",
+    "webpack-subresource-integrity": "^5.2.0-rc.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -27,12 +33,14 @@
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "copy-webpack-plugin": "^12.0.2",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "webpack": "^5.98.0"
   }
 }
